# eggfan

./: .gitignore  README.md  lookup.tsv  pyproject.toml  setup.cfg  setup.py  tree.txt
geneannotator/: Orthogroup_argparse.py  goterms_argparse.py  orthogroup.py  orthogroup_argparse.py  phylome.py  phylome_argparse.py  sandbox.py  utils.py
geneannotator/geneannotator.egg-info/: PKG-INFO
geneannotator/geneannotator_burgoa.egg-info/: PKG-INFO
scripts/: sandbox.py
src/: sandbox.py
src/geneannotator/: Orthogroup_argparse.py  goterms_argparse.py  orthogroup_argparse.py  phylome.py  phylome_argparse.py  sandbox.py  utils.py
src/geneannotator/geneannotator.egg-info/: SOURCES.txt
src/geneannotator_burgoa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: 2769_annotated_orthology.tsv  2903_annotated_orthology.tsv  3055_annotated_orthology.tsv  7227_orthologs_redux.tsv  7227_orthologs_redux_1000.tsv  Ortho_method_Capitella_TFs.tsv  egg_prots.csv  lookup_5759.txt  proto_ortho.csv  query_orthogroups.csv  query_targets.csv  run.sh  setup.cfg  test.tsv  test_script.py  test_script_cluster_paths.py
tests/Ortho_Laura/: Cgigas_roslin_eggnog_TFs.tsv  Pcro_annotation_eggnog_TFs.tsv
tests/data/: TFs_Human_Ensembl.txt
tests/test1/: lookup.tsv
tests/test2/: lookup.tsv
tests/translated_orthotables/: translated_2769_human_orthologs.tsv  translated_2903_human_orthologs.tsv  translated_3055_human_orthologs.tsv
translated/: 7227_human_orthologs.tsv
vignettes/: GOTerms method.md  Orthogroup method.md  Phylome method.md
(+3 files in other folders)
