[metadata]
name = geneannotator-burgoa
version = 0.0.1
author = Javier Burgoa Cardas
author_email = javierburgoac@gmail.com
description = Give annotations to your genes based on evolutionary data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.embl.de/burgoa/geneannotator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.9.5

[options.packages.find]
where = src